--- a/abc.html
+++ b/abc.html
@@ -10,11 +10,8 @@
 <p>uusi hello world kuva</p>
 <p>This is the first file in my new Git Repo.</p>
 <p>a new line in our file</p>
-<<<<<<< HEAD
 <p>abcd556</p>
-=======
-<p>hello world kuva</p>
->>>>>>> hello-world-image
+<p>erikokoinen hello world kuva</p>
 
 </body>
 </html> 
